examples/test/testpolicy169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy169
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key2: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value11
      podSelector:
        matchLabels:
          key39: value28
          key19: value43
          key18: value18
